more contrast for bad screens (fixes #5)

--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 :root {
 	font-size: 20px;
-	--bg-main: #ddd;
+	--bg-main: #eee;
 	--text-main: #222;
 	--text-link: #444;
 	--font-main: 300 1rem/1.7rem Helvetica, Arial, sans-serif;
